Closed
Bug 40547
Opened 25 years ago
Closed 24 years ago
Mail is shown with incorrect font size (larger than with 4.x)
Categories
(MailNews Core :: MIME, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
Future
People
(Reporter: bugzilla, Assigned: nhottanscp)
Details
(Whiteboard: [nsbeta2-][nsbeta3-])
Attachments
(4 files)
|
4.22 KB,
text/plain
|
Details | |
|
4.68 KB,
image/gif
|
Details | |
|
4.56 KB,
patch
|
Details | Diff | Splinter Review | |
|
4.78 KB,
patch
|
Details | Diff | Splinter Review |
The attached mail is shown with incorrect font size. I'm talking about the text:
"The mail system on ....."
The text has a <pre> around it but it seems that it's shown with a font size=+1
or something like that.
Compared to Netscape 4.73 the text in Mozilla is larger. In Netscape 4.73 the
text is shown with normal size.
| Reporter | ||
Comment 1•25 years ago
|
||
Comment 2•25 years ago
|
||
Are you sure you are using the right prefs to control the size...don't compare
everything to 4.x. If you set the Unicode prefs to the size you want, this
should be working.
- rhp
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → INVALID
| Reporter | ||
Comment 3•25 years ago
|
||
Not quite sure what you me by: "prefs to control the size". I havn't changed a
thing. Clean new profile.
Actually the subject should be changed to:
Why do text in <pre> in HTML Mails show with larger font than a "normal" mail?
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Comment 4•25 years ago
|
||
Naoki,
Can you comment on this issue.
- rhp
| Assignee | ||
Comment 5•25 years ago
|
||
Looks like mine, let me take a look at this.
Assignee: rhp → nhotta
Status: REOPENED → NEW
| Assignee | ||
Comment 6•25 years ago
|
||
We are putting following tag,
<div style="font-family: Times New Roman; font-size: 16px;">
Looks like that affects the format of the text below the tag.
After I change it like below, problem disappeared.
<div style="font-family: Times New Roman;" "font-size: 16px;">
Status: NEW → ASSIGNED
Keywords: nsbeta2
| Assignee | ||
Comment 7•25 years ago
|
||
I was wrong, the tag is correct.
For text/html, variable-width font size is used. For text/plain fixed-width font
size is used. The attached message for this bug is a HTML mail so variable-width
font size was used.
This is a difficult issue. We allow the user to set font and size by the pref.
But that may also affect the attachment HTML font size (if no specification for
the font size in the HTML).
We could apply the pref font setting to the main body only (or exclude HTML
attachments).
| Reporter | ||
Comment 8•25 years ago
|
||
At least text inside a <pre> tag should be the same size as the text in a
"normal" non-HTML mail.
| Assignee | ||
Comment 9•25 years ago
|
||
I think that is not possible unless we parse the attachment and specify sizes
for <pre> or <tt>, or specify sizes only for the main body (attachments
font/size not affected by the font pref).
Adding mozilla@bucksch.org to cc, any expected change by the css feature?
Comment 10•25 years ago
|
||
Guys...we can't add that level of complexity for inline attachments....its too
late in the game.
- rhp
Comment 11•25 years ago
|
||
nhotta, I only changed the plain text and flowed converters.
Note, that there is no attachment whatsoever.
Parsing for <pre>s would ba a real hack. Dunno, why the fixed width fonts size
is larger than the variable.
| Reporter | ||
Comment 12•25 years ago
|
||
Another easy way to reproduce.
- compose a mail to yourself with fx your signature.
- send as "Both text plain and HTML"
- reply to the mail to yourself. Send it as "Both text plain and HTML"
Now the text in the reply (fx the signature) is larger than the other text.
Will attach image...
| Reporter | ||
Comment 13•25 years ago
|
||
| Assignee | ||
Comment 14•25 years ago
|
||
The same issue as we specify font size from pref and generates output something
like below.
<div style="font-family: PrefFontName; font-size: PrefFontSize;">
<body>
The main body.<br>
<pre>
Signature text.
</pre>
</body>
</div>
I don't have solution, workaround could be..
Do not specify font size for attachments.
No font size specification at all (this will lose font size control by the
pref).
Send "div" instead of "pre" for signature file (but this only solves a
particular problem).
Comment 16•25 years ago
|
||
If the sig in the example HTML above renders too large in the browser as well,
this is a NSLayout issue. The HTML is (apart from the <body>) completely OK and
should render OK.
| Assignee | ||
Comment 17•25 years ago
|
||
Adding selmer and ftang to cc.
Steve, this is not an i18n bug and I need your help. Do you think this is
nsbeta3?
This is a problem about tag conflicts in HTML mail view. I may remove the size
specification for HTML mail view to resolve the conflict but that would disable
the ability to change font size by font pref. I have no other solution right
now.
| Assignee | ||
Comment 18•25 years ago
|
||
Put nsbeta3 and reassign to selmer so this will be reviewed by the mail triage
meeting.
Comment 19•25 years ago
|
||
mail triage marking [nsbeta3-]
Whiteboard: [nsbeta2-] → [nsbeta2-][nsbeta3-]
Updated•25 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Future
Comment 20•25 years ago
|
||
Accepting to get out of bugzilla nag mail.
| Reporter | ||
Comment 21•25 years ago
|
||
Is quite easy to produce a mail that shows with larger font.
Just go to:
http://ftp.mozilla.org/pub/mozilla/nightly/latest/
and send that page (File -> Send Page) to yourself, and compare the font size
with the font size from Netscape 4.75
| Assignee | ||
Comment 22•25 years ago
|
||
I think we can use percentage (e.g. font-size: 150%) instead of absolute size.
I will attach a patch to change the function to return percentage in addition to
pixel size.
Ben, could you try to modify your code to use percentage for font size?
| Assignee | ||
Comment 23•25 years ago
|
||
Comment 24•25 years ago
|
||
> Ben, could you try to modify your code to use percentage for font size?
I am not aware that I set absolute font sizes anywhere. However, I cannot check
- busy with Beonex. Feel free to check yourself :).
| Assignee | ||
Comment 25•24 years ago
|
||
Comment 26•24 years ago
|
||
Now, I've not read all about this, but wasn't the reason to avoid percentages
that nested percentage sizes on fonts behaves really bad. If you for instance
quote a mail with 140% font size and then add 140% font size yourself you get
196% of normal size.
So can the font size end up in a output html mail by for instance quoting or
forwarding? If it's so, I think we need to find a modified solution.
| Assignee | ||
Comment 27•24 years ago
|
||
No, this is for display only.
We know that this also affects copy/paste bug 55853 but that's not a font size
specific issue.
Reassign to nhotta.
Assignee: selmer → nhotta
Status: ASSIGNED → NEW
Comment 29•24 years ago
|
||
sr=mscott
| Assignee | ||
Comment 30•24 years ago
|
||
Fixed in the trunk.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago → 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 31•24 years ago
|
||
My troubled mail now shows with correct (normal) font size.
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•