Changed to used percentage instead of absolute pixel size for HTML display. This fixes the problem of plain text attached in HTML is shown larger, bug 40547, r=rhp, sr=mscott.