mailnews/mime/src/mimetpla.cpp
@@ -161,9 +161,10 @@ MimeInlineTextPlain_parse_begin (MimeObject *obj)
            (otherwise unicode font will be used since the data is UTF-8). */
         char fontName[128];     // default font name
         PRInt32 fontSize;       // default font size
+        PRInt32 fontSizePercentage;   // size percentage
         nsresult rv = GetMailNewsFont(obj,
                            !obj->options->variable_width_plaintext_p,
-                           fontName, 128, &fontSize);
+                           fontName, 128, &fontSize, &fontSizePercentage);
         if (NS_SUCCEEDED(rv))
         {
           fontstyle = "font-family: ";
